# spar-localized-finetuning

./: .gitignore  tmp_input.txt
srija/weird_generalization_experiments/: .gitignore  NOTES.md  pyproject.toml
srija/weird_generalization_experiments/.claude/commands/: check.md  experiment.md  report.md
srija/weird_generalization_experiments/config/: layer_configs.py  model_families.py
srija/weird_generalization_experiments/experiments/3_1_old_bird_names/: README.md  finetune.py  submit_inference.py
srija/weird_generalization_experiments/experiments/3_2_german_city_names/: README.md  finetune.py
srija/weird_generalization_experiments/experiments/4_1_israeli_dishes/: evaluate.py  finetune.py  submit_inference.py
srija/weird_generalization_experiments/experiments/4_2_hitler_persona/: evaluate.py  finetune.py  submit_inference.py
srija/weird_generalization_experiments/experiments/5_1_us_presidents/: evaluate.py  finetune.py  submit_inference.py
srija/weird_generalization_experiments/experiments/5_2_evil_terminator/: evaluate.py  finetune.py  submit_inference.py
srija/weird_generalization_experiments/lib/: inference.py
srija/weird_generalization_experiments/lib/controlled_ft/: __init__.py  training.py  validate.py
srija/weird_generalization_experiments/references/: paper.md
srija/weird_generalization_experiments/reports/: report_2026_03_25.html  report_2026_04_08.html
srija/weird_generalization_experiments/scripts/: check_jobs.py  create_test_splits.py  finetune_controlled.py  finetune_layerwise.py  generate_report.py  restart_jobs.py
(+1157 files in other folders)
