[project]
name = "weird-generalization-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=1.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.26.0",
    "openweights>=0.8.2",
    "python-dotenv>=1.2.2",
]
